# crud-simples-fastapi

./: docker-compose.yaml  main.py  pyproject.toml
src/module/: controller.py  models.py  repository.py  router.py  service.py  token.py
src/module/controller/: book.py
src/module/models/: user.py
src/module/repository/: book.py  user.py
src/module/service/: book.py  user.py
