[tool.poetry]
name = "crud-simples-fastapi"
version = "0.1.0"
description = ""
authors = ["MatheusSBranco <m.siebeneichler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.1"
fastapi = "^0.104.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
