[tool.poetry]
name = "crud-simples-fastapi"
version = "0.1.0"
description = ""
authors = ["MatheusSBranco <m.siebeneichler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.11"
pydantic = "^1.10.13"
fastapi = "^0.104.1"
psycopg2-binary = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
